--- a/c-sharp-machine-learning.csproj
+++ b/c-sharp-machine-learning.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.ML" Version="0.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="iris-data.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
