added structure for ml program

--- a/c-sharp-machine-learning.csproj
+++ b/c-sharp-machine-learning.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <None Update="iris-data.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 </Project>
